--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>TP2- Bucles</title>
 </head>
 <body>
-    <script></script>
+    <script src="./js/ejercicio1.js"></script>
 </body>
 </html>
